Fixed some shit

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -5,8 +5,8 @@ messages:
   report_usage: "&4&lReport &8» &cUso: &7/report [usuario] [razón]"
   report_submitted: "&4&lReport &8» &aTu reporte ha sido enviado con éxito."
   report_received: "&4&lReport &8» &b{player} &fha reportado a &b{target} &fpor: {reason}."
-  report_accepted: "&4&lReport &8» &aHas aceptado el reporte de &b{player}."
-  report_rejected: "&4&lReport &8» &cHas denegado el reporte de &b{player}."
+  report_accepted: "&4&lReport &8» &aHas aceptado el reporte de &b{target}."
+  report_rejected: "&4&lReport &8» &cHas denegado el reporte de &b{target}."
   report_not_found: "&4&lReport &8» &cNo se encontró el reporte con ID &b{id}."
   report_accept_usage: "&4&lReport &8» &cUso: &7/report-accept <ID del reporte>"
   report_deny_usage: "&4&lReport &8» &cUso: &7/report-deny <ID del reporte>"
