--- a/src/main/resources/aliases.yml
+++ b/src/main/resources/aliases.yml
@@ -1,10 +1,10 @@
 aliases:
-  report: ["report", "denunciar"]
+  report: ["report", "rep"]
   report-accept: ["report-accept", "ra"]
   report-deny: ["report-deny", "rd"]
   staffchat: ["staffchat", "sc"]
   adminchat: ["adminchat", "ac"]
-  reload: ["staffutilsreload", "surl", "stafffuutils reload"]
+  reload: ["staffutilsreload", "surl"]
   helpop: ["helpop", "help"]
   helpop-reply: ["helpop-reply", "hr"]
-  alert: ["broadcast", "bc", "alert"]
+  alert: ["alert", "bc"]
