WebHook Support and some fixes
- Fixed some placeholder errores
- Fixed some code
- Changed default configs
- Added webhooks to reload
- Added webhooks config
- And suffer

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,17 @@
             <version>1.16-R0.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version> <!-- O la última versión disponible -->
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -27,6 +38,19 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
